maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:23: error: not found: value Dirction
    if (getDirection == Dirction.SOUTH) {
                        ^